jss-compiler/tests/parser/invalid/multiple_brace_errors.jss
function void main() {
    // Bloco com erro 1
    
    if(1 > 0)
        console.log("Erro");
    }
    
    // Codigo valido no meio
    let int b = 20;
    
    // Bloco com erro 2
    {
        let int x = 10 y;
    }
    
    // Codigo valido no final
    let int c = 30;
}
